--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <input type="text" name="url" id="burger-image">
         <br/>
         <br/>
-        <input type="submit" value="Submit Order"></input>
+        <input type="submit" value="Submit Order" data-type="submit"></input>
       </form>
     </div>
   </div>
